--- a/sass/components/common/_container.scss
+++ b/sass/components/common/_container.scss
@@ -1,10 +1,16 @@
 .container{
-    width: 1230px;
     padding: 0 15px;
     margin: 0 auto;
 
-    .page-header &{
-        display: flex;
-        align-items: center;
+    @media screen and (min-width: $mobile) {
+        width: $mobile;
+    }
+    
+    @media screen and (min-width: $tablet){
+        width: $tablet;
+    }
+    
+    @media screen and (min-width: $desktop){
+        width: $desktop;
     }
 }
