--- a/sass/components/common/_logo.scss
+++ b/sass/components/common/_logo.scss
@@ -1,5 +1,4 @@
 .page-header__link{
-    margin-right: 93px;
     font-family: $second-font;
     font-weight: 700;
     font-size: 26px;
@@ -7,6 +6,9 @@
     letter-spacing: 0.03em;
     color: $title-color;
     text-decoration: none;
+    @media screen and (min-width: $tablet){
+        margin-right: 93px;
+    }
 }
 .page-header__logo{
     font-family:$second-font;
