--- a/sass/components/header/_contact.scss
+++ b/sass/components/header/_contact.scss
@@ -1,30 +1,56 @@
 .contact__list{
-    display: flex;
-    margin-left: auto;
-    align-items: center;
     @extend %list
 }
 .contact__item{
     margin-right: 50px;
-    display: flex;
-    align-items: center;
+    &:last-child{
+        margin-right: 0;
+    }
+    @media screen and (max-width: 767px){
+        margin-bottom: 32px;
+        &:last-child{
+            margin-bottom: 0;
+        }
+    }
+    @media screen and (min-width: $tablet){
+        display: inline-block;
+        margin-bottom: 10px;
+        &:last-child{
+            margin-bottom: 0;
+        }
+    }
+    @media screen and (min-width: $desktop){
+        display: flex;
+        align-items: center;
+    
+    }
 }
 .contact__link{
-    display: inline-flex;
-    align-items: center;
     color: $main-text-color;
     text-decoration: none;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
+    font-size: 34px;
+    line-height: 1.38;
     letter-spacing: 0.02em;
     &:hover, &:focus{
         color: $accent-color;
         fill: $accent-color;
     }
+    @media screen and (min-width: $tablet){
+        color: $main-text-color;
+        text-decoration: none;
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        font-weight: 500;
+        font-size: 14px;
+        line-height: 1.14;
+        letter-spacing: 0.02em;
+    }
 }
 .contact__icon{
     margin-right: 10px;
     fill: currentColor;
+    @media screen and (max-width: 767px){
+        display: none;
+    }
 }
