--- a/sass/components/header/_nav.scss
+++ b/sass/components/header/_nav.scss
@@ -1,41 +1,63 @@
 
 .site-nav__list{
-    display: flex;
-    @extend %list
+    @extend %list;
+    @media screen and (min-width: $tablet){
+        display: flex;
+    }
 }
 .site-nav__item{
-    margin-right: 50px;
-
-    &:last-child{
-        margin-right: 0;
+    @media screen and (max-width: 767px){
+        margin-bottom: 32px;
+        &:last-child{
+            margin-bottom: 0;
+        }
+    }
+    @media screen and (min-width:$tablet){
+        margin-right: 50px;
+        &:last-child{
+            margin-right: 0;
+        }
     }
 }
 .site-nav__link{
-    display: flex;
-    align-items: center;
     text-decoration: none;
-    padding: 32px 0px;
     color: $title-color;
     font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
+    font-size: 40px;
+    line-height: 1.17;
     letter-spacing: 0.02em;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     &:hover, &:focus{
         color: $accent-color;
     }
+    
+    @media screen and (min-width: $tablet){
+        display: flex;
+        align-items: center;
+        padding: 32px 0px;
+        text-decoration: none;
+        color: $title-color;
+        font-weight: 500;
+        font-size: 14px;
+        line-height: 1.14;
+        letter-spacing: 0.02em;
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-    &--active::after{
-        content:" ";
-        display: block;
-        position: absolute;
-        bottom: -1px;
-        left: 0;
-        width: 100%;
-        height: 4px;
-        border-radius: 2px;
-        background-color: $accent-color;
+        &:hover, &:focus{
+            color: $accent-color;
+        }
+        &--active::after{
+            content:" ";
+            display: block;
+            position: absolute;
+            bottom: -1px;
+            left: 0;
+            width: 100%;
+            height: 4px;
+            border-radius: 2px;
+            background-color: $accent-color;
+        }
     }
 }
 .site-nav__link--active{
