--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@
   padding: 0;
 }
 
-.features, .work, .team, .companies, .gallery {
+.work, .gallery {
   padding-top: 94px;
   padding-bottom: 94px;
 }
@@ -572,18 +572,35 @@ h1, h2, h3, h4, h5, h6, p, ul {
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-  max-width: 1600px;
   padding: 200px 0px 200px 0px;
   margin-right: auto;
   margin-left: auto;
+}
+
+@media screen and (max-width: 767px) {
+  .hero {
+    max-width: 480px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .hero {
+    max-width: 768px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .hero {
+    max-width: 1600px;
+  }
 }
 
 .hero__title {
   margin-left: auto;
   margin-right: auto;
   font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
+  font-size: 26px;
+  line-height: 1.61;
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
@@ -891,6 +908,10 @@ h1, h2, h3, h4, h5, h6, p, ul {
   cursor: pointer;
 }
 
+.features {
+  padding: 60px 0px;
+}
+
 .features__title {
   font-weight: 700;
   font-size: 36px;
@@ -901,19 +922,13 @@ h1, h2, h3, h4, h5, h6, p, ul {
   color: #212121;
 }
 
-.features__lists {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
 .features__item {
-  width: 270px;
-  margin-right: 30px;
+  max-width: 450px;
+  margin-bottom: 30px;
 }
 
 .features__item:last-child {
-  margin-right: 0;
+  margin-bottom: 0;
 }
 
 .features__container-icon {
@@ -926,13 +941,14 @@ h1, h2, h3, h4, h5, h6, p, ul {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  width: 270px;
+  max-width: 450px;
   height: 120px;
   background-color: #f5f4fa;
   border-radius: 4px;
 }
 
 .features__subtitle {
+  text-align: center;
   margin-top: 30px;
   margin-bottom: 10px;
   font-weight: 700;
@@ -951,6 +967,12 @@ h1, h2, h3, h4, h5, h6, p, ul {
 
 .work {
   padding-top: 0;
+}
+
+@media screen and (max-width: 767px) {
+  .work {
+    display: none;
+  }
 }
 
 .work__title {
@@ -1012,44 +1034,40 @@ h1, h2, h3, h4, h5, h6, p, ul {
 }
 
 .team {
-  padding-top: 0;
+  padding: 60px 0px;
   background-color: #f5f4fa;
 }
 
 .team__title {
   font-weight: 700;
-  font-size: 36px;
-  line-height: 1.16;
+  font-size: 28px;
+  line-height: 1.17;
   text-align: center;
   letter-spacing: 0.03em;
   margin-bottom: 50px;
 }
 
-.team__lists {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
 .team__item {
-  margin-right: 30px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   background-color: #ffffff;
-  margin-right: 30px;
+  margin-bottom: 30px;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
 }
 
 .team__item:last-child {
-  margin-right: 0;
+  margin-bottom: 0;
 }
 
 .card__img {
   display: block;
-  max-width: 100%;
-  max-height: 100%;
+  max-width: 450px;
+  max-height: 460px;
 }
 
 .card__text-container {
@@ -1121,43 +1139,36 @@ h1, h2, h3, h4, h5, h6, p, ul {
   fill: currentColor;
 }
 
+.companies {
+  padding: 60px 0px;
+}
+
 .companies__title {
   font-weight: 700;
-  font-size: 36px;
-  line-height: 1.16;
+  font-size: 28px;
+  line-height: 1.17;
   text-align: center;
   letter-spacing: 0.03em;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
 }
 
 .companies__list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   list-style: none;
+  margin: -15px;
 }
 
 .companies__item {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin-right: 30px;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.companies__item:last-child {
-  margin-right: 0;
+  -ms-flex-preferred-size: calc((100% - 2 * 30px) / 2);
+      flex-basis: calc((100% - 2 * 30px) / 2);
+  margin: 15px;
 }
 
 .companies__link {
@@ -1198,17 +1209,12 @@ h1, h2, h3, h4, h5, h6, p, ul {
 }
 
 .footer {
-  padding: 60px 0 60px 0;
+  padding: 60px 0 120px 0;
   background-color: #2f303a;
 }
 
 .footer__container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: baseline;
-      -ms-flex-align: baseline;
-          align-items: baseline;
+  text-align: center;
 }
 
 .address__logo {
@@ -1238,6 +1244,7 @@ h1, h2, h3, h4, h5, h6, p, ul {
 }
 
 .address {
+  margin-bottom: 60px;
   -webkit-box-flex: 1;
       -ms-flex-positive: 1;
           flex-grow: 1;
@@ -1288,7 +1295,7 @@ h1, h2, h3, h4, h5, h6, p, ul {
 }
 
 .social {
-  margin-left: 70px;
+  margin-bottom: 60px;
 }
 
 .social__title {
@@ -1348,10 +1355,7 @@ h1, h2, h3, h4, h5, h6, p, ul {
 }
 
 .subs {
-  position: relative;
-  width: 570px;
   height: 86px;
-  margin-left: 93px;
 }
 
 .subs__text {
@@ -1364,9 +1368,6 @@ h1, h2, h3, h4, h5, h6, p, ul {
 }
 
 .subs__form {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   margin-top: 20px;
 }
 
@@ -1376,7 +1377,8 @@ h1, h2, h3, h4, h5, h6, p, ul {
 }
 
 .subs__input {
-  width: 358px;
+  margin-bottom: 20px;
+  width: 450px;
   height: 50px;
   background-color: #2f303a;
   border: 1px solid rgba(255, 255, 255, 0.3);
@@ -1397,6 +1399,8 @@ h1, h2, h3, h4, h5, h6, p, ul {
       -ms-flex-align: center;
           align-items: center;
   text-align: center;
+  margin-left: auto;
+  margin-right: auto;
   width: 200px;
   height: 50px;
   font-weight: 700;
