--- a/sass/components/companies-section/_companies.scss
+++ b/sass/components/companies-section/_companies.scss
@@ -1,30 +1,25 @@
 .companies{
-   @extend %section 
+   padding: 60px 0px;
 }
 .companies__title{
     font-weight: 700;
-    font-size: 36px;
-    line-height: 1.16;
+    font-size: 28px;
+    line-height: 1.17;
     text-align: center;
     letter-spacing: 0.03em;
-    margin-bottom: 50px;
+    margin-bottom: 30px;
     @extend %title
 }
 .companies__list{
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
-    align-items: center;
     list-style: none;
+    margin: -15px;
 }
 .companies__item{
-    display: flex;
-    margin-right: 30px;
-    justify-content: center;
-    align-items: center;
-
-    &:last-child{
-        margin-right: 0;
-    }
+    flex-basis: calc((100% - 2 * 30px) / 2);
+    margin: 15px;
 }
 .companies__link{
     display: flex;
