--- a/sass/components/features-section/_features.scss
+++ b/sass/components/features-section/_features.scss
@@ -1,5 +1,5 @@
 .features{
-    @extend %section
+    padding: 60px 0px;
 }
 .features__title{
     font-weight: 700;
@@ -10,30 +10,30 @@
     margin-bottom: 50px;
     color: $title-color;
     &--hide{
-    @extend %vh
+    @extend %vh;
     }
 }
 .features__lists{
-    display: flex;
     @extend %list
 }
 .features__item{
-    width: 270px;
-    margin-right: 30px;
+    max-width: 450px;
+    margin-bottom: 30px;
     &:last-child{
-        margin-right: 0;
+        margin-bottom: 0;
     }
 }
 .features__container-icon{
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 270px;
+    max-width: 450px;
     height: 120px;
     background-color:$team-section-button-color;
     border-radius: 4px;
 }
 .features__subtitle{
+    text-align: center;
     margin-top: 30px;
     margin-bottom: 10px;
     font-weight: 700;
