--- a/sass/components/footer/_footer.scss
+++ b/sass/components/footer/_footer.scss
@@ -1,8 +1,7 @@
 .footer{
-    padding: 60px 0 60px 0;
+    padding: 60px 0 120px 0;
     background-color: $hero-footer-background;
 }
 .footer__container{
-    display: flex;
-    align-items: baseline;
+    text-align: center;
 }
