--- a/sass/components/footer/_subs.scss
+++ b/sass/components/footer/_subs.scss
@@ -1,8 +1,5 @@
 .subs{
-    position: relative;
-    width: 570px;
     height: 86px;
-    margin-left: 93px;
 }
 .subs__text{
     font-weight: 700;
@@ -13,7 +10,6 @@
     color: $main-background-color;
 }
 .subs__form{
-    display: flex;
     margin-top: 20px;
 }
 .subs__label{
@@ -21,7 +17,8 @@
     margin-right: 12px;
 }
 .subs__input{
-    width: 358px;
+    margin-bottom: 20px;
+    width: 450px;
     height: 50px;
     background-color: $hero-footer-background;
     border: 1px solid rgba(255, 255, 255, 0.3);
@@ -34,6 +31,8 @@
     justify-content: center;
     align-items: center;
     text-align: center;
+    margin-left: auto;
+    margin-right: auto;
     width: 200px;
     height: 50px;
     font-weight: 700;
