--- a/sass/components/team-section/_card.scss
+++ b/sass/components/team-section/_card.scss
@@ -1,7 +1,7 @@
 .card__img{
     display: block;
-    max-width: 100%;
-    max-height: 100%;
+    max-width: 450px;
+    max-height: 460px;
 }
 .card__text-container{
     padding-top: 30px;
