--- a/sass/components/team-section/_team.scss
+++ b/sass/components/team-section/_team.scss
@@ -1,12 +1,11 @@
 .team{
-    padding-top: 0;
+    padding: 60px 0px;
     background-color: $team-section-button-color;
-    @extend %section
 }
 .team__title{
     font-weight: 700;
-    font-size: 36px;
-    line-height: 1.16;
+    font-size: 28px;
+    line-height: 1.17;
     text-align: center;
     letter-spacing: 0.03em;
     margin-bottom: 50px;
@@ -14,16 +13,15 @@
 }
 .team__lists{
     @extend %list;
-    display: flex;
 }
 .team__item{
-    margin-right: 30px;
     display: flex;
+    justify-content: center;
     background-color: $main-background-color;
-    margin-right: 30px;
+    margin-bottom: 30px;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
 
     &:last-child{
-        margin-right: 0;
+        margin-bottom: 0;
     }
 }
