--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,6 +9,7 @@
 @import './components/header/menu';
 @import './components/header/nav';
 @import './components/header/contact';
+@import './components/header/networks';
 @import './components/hero/hero';
 @import './components/hero/modal';
 @import './components/hero/form';
