--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-.site-nav__list, .contact__list, .features__lists, .work__lists, .team__lists, .address__contact-list {
+.site-nav__list, .contact__list, .networks__list, .features__lists, .work__lists, .team__lists, .address__contact-list {
   list-style: none;
   margin: 0;
   padding: 0;
@@ -301,6 +301,13 @@ h1, h2, h3, h4, h5, h6, p, ul {
   padding: 0;
 }
 
+.page-header {
+  position: relative;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  border-bottom: 1px solid #ececec;
+}
+
 .page-header__container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -311,7 +318,6 @@ h1, h2, h3, h4, h5, h6, p, ul {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  border-bottom: 1px solid #ececec;
   position: relative;
 }
 
@@ -329,6 +335,8 @@ h1, h2, h3, h4, h5, h6, p, ul {
 .container {
   padding: 0 15px;
   margin: 0 auto;
+  width: 100%;
+  max-width: 480px;
 }
 
 @media screen and (min-width: 480px) {
@@ -379,10 +387,32 @@ h1, h2, h3, h4, h5, h6, p, ul {
   color: #2196f3;
 }
 
+.menu {
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 48px 40px;
+  width: 100%;
+  height: 796px;
+  background-color: #ffffff;
+  text-align: left;
+}
+
+.menu.is-open {
+  display: block;
+}
+
 .menu__button {
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   border: none;
   background-color: transparent;
   margin: 0;
@@ -396,6 +426,10 @@ h1, h2, h3, h4, h5, h6, p, ul {
 
 .menu__button.is-open .icon__cross {
   display: block;
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  z-index: 999;
 }
 
 .menu__button.is-open .icon__menu {
@@ -405,6 +439,10 @@ h1, h2, h3, h4, h5, h6, p, ul {
 .menu__button:hover .icon__cross, .menu__button:focus .icon__cross,
 .menu__button:hover .icon__menu, .menu__button:focus .icon__menu {
   fill: #2196f3;
+}
+
+.site-nav__list {
+  margin-bottom: 302px;
 }
 
 @media screen and (min-width: 768px) {
@@ -531,14 +569,29 @@ h1, h2, h3, h4, h5, h6, p, ul {
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   font-weight: 500;
-  font-size: 34px;
-  line-height: 1.38;
+  font-size: 24px;
+  line-height: 1.16;
   letter-spacing: 0.02em;
 }
 
 .contact__link:hover, .contact__link:focus {
   color: #2196f3;
   fill: #2196f3;
+}
+
+@media screen and (max-width: 767px) {
+  .contact__link {
+    position: absolute;
+    bottom: 134px;
+  }
+  .contact__link--active {
+    color: #2196f3;
+    bottom: 194px;
+    font-weight: 500;
+    font-size: 34px;
+    line-height: 1.17;
+    letter-spacing: 0.02em;
+  }
 }
 
 @media screen and (min-width: 768px) {
@@ -565,6 +618,33 @@ h1, h2, h3, h4, h5, h6, p, ul {
   }
 }
 
+@media screen and (min-width: 768px) {
+  .networks {
+    display: none;
+  }
+}
+
+.networks__list {
+  position: absolute;
+  bottom: 48px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+}
+
+.networks__item {
+  padding: 0 10px;
+  color: #2196f3;
+  border-right: 1px solid rgba(33, 33, 33, 0.2);
+}
+
+.networks__item:last-child {
+  border: none;
+}
+
 .hero {
   background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/background-images/hero.jpg);
   background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/background-images/hero.jpg);
@@ -580,6 +660,10 @@ h1, h2, h3, h4, h5, h6, p, ul {
 @media screen and (max-width: 767px) {
   .hero {
     max-width: 480px;
+    padding: 118px 0;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
   }
 }
 
