--- a/sass/components/common/_container.scss
+++ b/sass/components/common/_container.scss
@@ -1,6 +1,8 @@
 .container{
     padding: 0 15px;
     margin: 0 auto;
+    width: 100%;
+    max-width: 480px;
 
     @media screen and (min-width: $mobile) {
         width: $mobile;
