--- a/sass/components/header/_contact.scss
+++ b/sass/components/header/_contact.scss
@@ -30,12 +30,24 @@
     text-decoration: none;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     font-weight: 500;
-    font-size: 34px;
-    line-height: 1.38;
+    font-size: 24px;
+    line-height: 1.16;
     letter-spacing: 0.02em;
     &:hover, &:focus{
         color: $accent-color;
         fill: $accent-color;
+    }
+    @media screen and (max-width: 767px){
+        position: absolute;
+        bottom: 134px;
+        &--active{
+            color: $accent-color;
+            bottom: 194px;
+            font-weight: 500;
+            font-size: 34px;
+            line-height: 1.17;
+            letter-spacing: 0.02em;
+        }
     }
     @media screen and (min-width: $tablet){
         color: $main-text-color;
