--- a/sass/components/header/_menu.scss
+++ b/sass/components/header/_menu.scss
@@ -1,8 +1,21 @@
 .menu{
-    // display: none;
+    display: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 48px 40px;
+    width: 100%;
+    height: 796px;
+    background-color: $main-background-color;
+    text-align: left;
+    &.is-open{
+        display: block;
+    }
 }
 .menu__button{
-    display: inline-flex;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     border: none;
     background-color: transparent;
     margin: 0;
@@ -14,6 +27,10 @@
 }
 .menu__button.is-open .icon__cross{
     display: block;
+    position: absolute;
+    top: 10px;
+    right: 15px;
+    z-index: 999;
 }
 .menu__button.is-open .icon__menu{
     display: none;
