--- a/sass/components/header/_nav.scss
+++ b/sass/components/header/_nav.scss
@@ -1,6 +1,7 @@
 
 .site-nav__list{
     @extend %list;
+    margin-bottom: 302px;
     @media screen and (min-width: $tablet){
         display: flex;
     }
