--- a/sass/components/header/_page-header.scss
+++ b/sass/components/header/_page-header.scss
@@ -2,14 +2,18 @@
     // display: flex;
     // align-items: center;
     // border-bottom: 1px solid #ececec;
-    // position: relative;
+    position: relative;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    border-bottom: 1px solid #ececec;
   }
   .page-header__container{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    border-bottom: 1px solid #ececec;
+    
     position: relative;
+    
     @media screen and (min-width: $tablet){
       display: flex;
       align-items: center;
