--- a/css/main.css
+++ b/css/main.css
@@ -335,8 +335,6 @@ h1, h2, h3, h4, h5, h6, p, ul {
 .container {
   padding: 0 15px;
   margin: 0 auto;
-  width: 100%;
-  max-width: 480px;
 }
 
 @media screen and (min-width: 480px) {
@@ -357,40 +355,10 @@ h1, h2, h3, h4, h5, h6, p, ul {
   }
 }
 
-.page-header__link {
-  font-family: "Raleway", sans-serif;
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
-  letter-spacing: 0.03em;
-  color: #212121;
-  text-decoration: none;
-}
-
-@media screen and (min-width: 768px) {
-  .page-header__link {
-    margin-right: 93px;
-  }
-}
-
-.page-header__logo {
-  font-family: "Raleway", sans-serif;
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
-  letter-spacing: 0.03em;
-  color: #212121;
-  text-decoration: none;
-}
-
-.page-header__logo--accent {
-  color: #2196f3;
-}
-
 .menu {
   display: none;
   position: absolute;
-  top: 0;
+  top: 100%;
   left: 0;
   padding: 48px 40px;
   width: 100%;
@@ -439,6 +407,36 @@ h1, h2, h3, h4, h5, h6, p, ul {
 .menu__button:hover .icon__cross, .menu__button:focus .icon__cross,
 .menu__button:hover .icon__menu, .menu__button:focus .icon__menu {
   fill: #2196f3;
+}
+
+.page-header__link {
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.19;
+  letter-spacing: 0.03em;
+  color: #212121;
+  text-decoration: none;
+}
+
+@media screen and (min-width: 768px) {
+  .page-header__link {
+    margin-right: 93px;
+  }
+}
+
+.page-header__logo {
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.19;
+  letter-spacing: 0.03em;
+  color: #212121;
+  text-decoration: none;
+}
+
+.page-header__logo--accent {
+  color: #2196f3;
 }
 
 .site-nav__list {
@@ -652,7 +650,7 @@ h1, h2, h3, h4, h5, h6, p, ul {
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-  padding: 200px 0px 200px 0px;
+  padding: 118px 0;
   margin-right: auto;
   margin-left: auto;
 }
@@ -660,7 +658,6 @@ h1, h2, h3, h4, h5, h6, p, ul {
 @media screen and (max-width: 767px) {
   .hero {
     max-width: 480px;
-    padding: 118px 0;
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -1247,6 +1244,8 @@ h1, h2, h3, h4, h5, h6, p, ul {
           justify-content: center;
   list-style: none;
   margin: -15px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .companies__item {
@@ -1457,12 +1456,12 @@ h1, h2, h3, h4, h5, h6, p, ul {
 
 .subs__label {
   display: inline-block;
-  margin-right: 12px;
+  max-width: 450px;
 }
 
 .subs__input {
   margin-bottom: 20px;
-  width: 450px;
+  max-width: 100%;
   height: 50px;
   background-color: #2f303a;
   border: 1px solid rgba(255, 255, 255, 0.3);
@@ -1470,6 +1469,12 @@ h1, h2, h3, h4, h5, h6, p, ul {
           filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
   cursor: pointer;
+}
+
+@media screen and (min-width: 480px) {
+  .subs__input {
+    width: 450px;
+  }
 }
 
 .subs__button {
