--- a/sass/components/companies-section/_companies.scss
+++ b/sass/components/companies-section/_companies.scss
@@ -16,6 +16,8 @@
     justify-content: center;
     list-style: none;
     margin: -15px;
+    margin-left: auto;
+    margin-right: auto;
 }
 .companies__item{
     flex-basis: calc((100% - 2 * 30px) / 2);
