--- a/sass/components/footer/_subs.scss
+++ b/sass/components/footer/_subs.scss
@@ -14,17 +14,20 @@
 }
 .subs__label{
     display: inline-block;
-    margin-right: 12px;
+    max-width: 450px;
 }
 .subs__input{
     margin-bottom: 20px;
-    width: 450px;
+    max-width: 100%;
     height: 50px;
     background-color: $hero-footer-background;
     border: 1px solid rgba(255, 255, 255, 0.3);
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
     border-radius: 4px;
     cursor: pointer;
+    @media screen and (min-width: $mobile){
+        width: 450px;
+    }
 }
 .subs__button{
     display: flex;
