--- a/css/main.css
+++ b/css/main.css
@@ -358,6 +358,7 @@ h1, h2, h3, h4, h5, h6, p, ul {
 .menu {
   display: none;
   position: absolute;
+  z-index: 999;
   top: 100%;
   left: 0;
   padding: 48px 40px;
@@ -381,6 +382,7 @@ h1, h2, h3, h4, h5, h6, p, ul {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  text-align: center;
   border: none;
   background-color: transparent;
   margin: 0;
@@ -624,6 +626,7 @@ h1, h2, h3, h4, h5, h6, p, ul {
 
 .networks__list {
   position: absolute;
+  left: 30px;
   bottom: 48px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -635,12 +638,17 @@ h1, h2, h3, h4, h5, h6, p, ul {
 
 .networks__item {
   padding: 0 10px;
-  color: #2196f3;
   border-right: 1px solid rgba(33, 33, 33, 0.2);
 }
 
 .networks__item:last-child {
   border: none;
+}
+
+.networks__link {
+  text-decoration: none;
+  color: #2196f3;
+  cursor: pointer;
 }
 
 .hero {
@@ -1519,8 +1527,7 @@ h1, h2, h3, h4, h5, h6, p, ul {
 }
 
 .gallery__item {
-  width: 370px;
-  margin-right: 30px;
+  width: 450px;
   margin-bottom: 30px;
 }
 
@@ -1528,11 +1535,20 @@ h1, h2, h3, h4, h5, h6, p, ul {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   margin-bottom: 50px;
   list-style: none;
+}
+
+.button__item:first-child {
+  margin-bottom: 15px;
+}
+
+@media screen and (max-width: 479px) {
+  .button__item:nth-child(3) {
+    margin-bottom: 15px;
+  }
 }
 
 .button__item:not(:last-child) {
