--- a/sass/components/header/_menu.scss
+++ b/sass/components/header/_menu.scss
@@ -1,6 +1,7 @@
 .menu{
     display: none;
     position: absolute;
+    z-index: 999;
     top: 100%;
     left: 0;
     padding: 48px 40px;
@@ -16,6 +17,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    text-align: center;
     border: none;
     background-color: transparent;
     margin: 0;
