--- a/sass/components/header/_networks.scss
+++ b/sass/components/header/_networks.scss
@@ -6,15 +6,20 @@
 .networks__list{
     @extend %list;
     position: absolute;
+    left: 30px;
     bottom: 48px;
     display: flex;
     align-items: flex-end;
 }
 .networks__item{
  padding: 0 10px;
- color: $accent-color;
  border-right: 1px solid rgba(33, 33, 33, 0.2);
  &:last-child{
      border: none;
  }
+}
+.networks__link{
+    text-decoration: none;
+    color: $accent-color;
+    cursor: pointer;
 }
