--- a/sass/components/portfolio/_buttons.scss
+++ b/sass/components/portfolio/_buttons.scss
@@ -1,10 +1,18 @@
 .button__list{
     display: flex;
-    justify-content: center;
+    flex-wrap: wrap;
     margin-bottom: 50px;
     list-style: none;
 }
 .button__item{
+    &:first-child{
+        margin-bottom: 15px;
+    }
+    &:nth-child(3){
+        @media screen and (max-width: 479px){
+            margin-bottom: 15px;
+        }
+    }
     &:not(:last-child){
         margin-right: 8px;
     }
