--- a/sass/components/header/_menu.scss
+++ b/sass/components/header/_menu.scss
@@ -23,6 +23,9 @@
     margin: 0;
     padding: 0;
     cursor: pointer;
+    @media screen and (min-width: $tablet){
+        display: none;
+    }
 }
 .menu__button .icon__cross{
     display: none;
