--- a/css/main.css
+++ b/css/main.css
@@ -308,17 +308,19 @@ h1, h2, h3, h4, h5, h6, p, ul {
   border-bottom: 1px solid #ececec;
 }
 
-.page-header__container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  position: relative;
+@media screen and (max-width: 767px) {
+  .page-header__container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    position: relative;
+  }
 }
 
 @media screen and (min-width: 768px) {
@@ -390,6 +392,12 @@ h1, h2, h3, h4, h5, h6, p, ul {
   cursor: pointer;
 }
 
+@media screen and (min-width: 768px) {
+  .menu__button {
+    display: none;
+  }
+}
+
 .menu__button .icon__cross {
   display: none;
 }
@@ -414,8 +422,8 @@ h1, h2, h3, h4, h5, h6, p, ul {
 .page-header__link {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
+  font-size: 24px;
+  line-height: 1.16;
   letter-spacing: 0.03em;
   color: #212121;
   text-decoration: none;
@@ -430,8 +438,8 @@ h1, h2, h3, h4, h5, h6, p, ul {
 .page-header__logo {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
+  font-size: 24px;
+  line-height: 1.16;
   letter-spacing: 0.03em;
   color: #212121;
   text-decoration: none;
@@ -695,6 +703,7 @@ h1, h2, h3, h4, h5, h6, p, ul {
   text-transform: uppercase;
   color: #ffffff;
   margin-bottom: 30px;
+  max-width: 360px;
 }
 
 .hero__button {
@@ -737,7 +746,7 @@ h1, h2, h3, h4, h5, h6, p, ul {
   top: 50%;
   left: 50%;
   padding: 40px;
-  width: 528px;
+  max-width: 450px;
   height: 581px;
   background-color: #fff;
   border-radius: 4px;
@@ -752,6 +761,12 @@ h1, h2, h3, h4, h5, h6, p, ul {
 .backdrop.is-hidden .modal {
   -webkit-transform: translate(-50%, -50%) scale(1.1);
           transform: translate(-50%, -50%) scale(1.1);
+}
+
+@media screen and (min-width: 768px) {
+  .modal {
+    height: 609px;
+  }
 }
 
 .modal__title {
@@ -838,7 +853,7 @@ h1, h2, h3, h4, h5, h6, p, ul {
 
 .form__input {
   padding-left: 42px;
-  width: 448px;
+  max-width: 370px;
   height: 40px;
   border-radius: 4px;
   border: 1px solid rgba(33, 33, 33, 0.2);
@@ -868,7 +883,7 @@ h1, h2, h3, h4, h5, h6, p, ul {
   cursor: pointer;
   padding-top: 12px;
   padding-left: 16px;
-  width: 448px;
+  width: 370px;
   resize: none;
   border-radius: 4px;
   border: 1px solid rgba(33, 33, 33, 0.2);
@@ -959,8 +974,8 @@ h1, h2, h3, h4, h5, h6, p, ul {
 }
 
 .form__text-checkbox {
-  font-size: 14px;
-  line-height: 1.71;
+  font-size: 12px;
+  line-height: 1.16;
   letter-spacing: 0.03em;
 }
 
@@ -1011,13 +1026,36 @@ h1, h2, h3, h4, h5, h6, p, ul {
   color: #212121;
 }
 
+.features__lists {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin: -15px;
+}
+
 .features__item {
   max-width: 450px;
-  margin-bottom: 30px;
 }
 
 .features__item:last-child {
   margin-bottom: 0;
+}
+
+@media screen and (max-width: 767px) {
+  .features__item {
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .features__item {
+    max-width: 354px;
+    margin: 15px;
+    -ms-flex-preferred-size: calc((100% - 2 * 30) / 2);
+        flex-basis: calc((100% - 2 * 30) / 2);
+  }
 }
 
 .features__container-icon {
@@ -1036,8 +1074,13 @@ h1, h2, h3, h4, h5, h6, p, ul {
   border-radius: 4px;
 }
 
+@media screen and (min-width: 768px) {
+  .features__container-icon {
+    max-width: 354px;
+  }
+}
+
 .features__subtitle {
-  text-align: center;
   margin-top: 30px;
   margin-bottom: 10px;
   font-weight: 700;
@@ -1058,7 +1101,7 @@ h1, h2, h3, h4, h5, h6, p, ul {
   padding-top: 0;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 1199px) {
   .work {
     display: none;
   }
@@ -1136,6 +1179,17 @@ h1, h2, h3, h4, h5, h6, p, ul {
   margin-bottom: 50px;
 }
 
+@media screen and (min-width: 768px) {
+  .team__lists {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    margin: -15px;
+  }
+}
+
 .team__item {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1144,13 +1198,27 @@ h1, h2, h3, h4, h5, h6, p, ul {
       -ms-flex-pack: center;
           justify-content: center;
   background-color: #ffffff;
-  margin-bottom: 30px;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
 }
 
 .team__item:last-child {
   margin-bottom: 0;
+}
+
+@media screen and (max-width: 767px) {
+  .team__item {
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .team__item {
+    max-width: 354px;
+    margin: 15px;
+    -ms-flex-preferred-size: calc((100% - 2 *30));
+        flex-basis: calc((100% - 2 *30));
+  }
 }
 
 .card__img {
