--- a/sass/components/header/_page-header.scss
+++ b/sass/components/header/_page-header.scss
@@ -8,12 +8,13 @@
     border-bottom: 1px solid #ececec;
   }
   .page-header__container{
-    display: flex;
+    @media screen and (max-width: 767px){
+      display: flex;
     align-items: center;
     justify-content: space-between;
     
     position: relative;
-    
+    }
     @media screen and (min-width: $tablet){
       display: flex;
       align-items: center;
