--- a/sass/components/hero/_hero.scss
+++ b/sass/components/hero/_hero.scss
@@ -32,6 +32,7 @@
     text-transform: uppercase;
     color: $main-background-color;
     margin-bottom: 30px;
+    max-width: 360px;
 }
 .hero__button{
     display: flex;
