--- a/sass/components/hero/_modal.scss
+++ b/sass/components/hero/_modal.scss
@@ -18,7 +18,7 @@
     left: 50%;
     padding: 40px;
 
-    width: 528px;
+    max-width: 450px;
     height: 581px;
     background-color: #fff;
     border-radius: 4px;
@@ -27,6 +27,9 @@
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     .backdrop.is-hidden &{
         transform: translate(-50%, -50%) scale(1.1);
+    }
+    @media screen and (min-width: $tablet){
+        height: 609px;
     }
 }
 .modal__title{
