--- a/sass/components/team-section/_team.scss
+++ b/sass/components/team-section/_team.scss
@@ -13,15 +13,27 @@
 }
 .team__lists{
     @extend %list;
+    @media screen and (min-width: $tablet){
+        display: flex;
+        flex-wrap: wrap;
+        margin: -15px;
+    }
 }
 .team__item{
     display: flex;
     justify-content: center;
     background-color: $main-background-color;
-    margin-bottom: 30px;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
 
     &:last-child{
         margin-bottom: 0;
+    }
+    @media screen and (max-width: 767px){
+        margin-bottom: 30px;
+    }
+    @media screen and (min-width: $tablet){
+        max-width: 354px;
+        margin: 15px;
+        flex-basis: calc((100% - 2 *30));
     }
 }
