--- a/sass/components/footer/_subs.scss
+++ b/sass/components/footer/_subs.scss
@@ -1,5 +1,8 @@
 .subs{
     height: 86px;
+    @media screen and (min-width: $tablet){
+        text-align: center;
+    }
 }
 .subs__text{
     font-weight: 700;
