--- a/sass/components/companies-section/_companies.scss
+++ b/sass/components/companies-section/_companies.scss
@@ -15,13 +15,24 @@
     flex-wrap: wrap;
     justify-content: center;
     list-style: none;
+   @media screen and (max-width: 767px){
     margin: -15px;
-    margin-left: auto;
-    margin-right: auto;
+   }
+   @media screen and (max-width: 1199px){
+       margin: -15px;
+   }
+    // margin-left: auto;
+    // margin-right: auto;
 }
 .companies__item{
+   @media screen and (max-width: 767px){
     flex-basis: calc((100% - 2 * 30px) / 2);
     margin: 15px;
+   }
+   @media screen and (min-width: $tablet) and (max-width: 1199px){
+       margin: 15px;
+       flex-basis: calc((100% - 3 * 30px) / 3);
+   }
 }
 .companies__link{
     display: flex;
