--- a/sass/components/features-section/_features.scss
+++ b/sass/components/features-section/_features.scss
@@ -15,9 +15,11 @@
 }
 .features__lists{
     @extend %list;
-    display: flex;
-    flex-wrap: wrap;
-    margin: -15px;
+    @media screen and (min-width: $tablet) and (max-width: 1199px){
+        display: flex;
+        flex-wrap: wrap;
+        margin: -15px;
+    }
 }
 .features__item{
     
@@ -31,7 +33,7 @@
     @media screen and (min-width: $tablet){
         max-width: 354px;
         margin: 15px;
-        flex-basis: calc((100% - 2 * 30) / 2);
+        flex-basis: calc((100% - 2 * 30px) / 2);
     }
 }
 .features__container-icon{
