--- a/sass/components/footer/_address.scss
+++ b/sass/components/footer/_address.scss
@@ -1,6 +1,12 @@
 .address{
     margin-bottom: 60px;
-    flex-grow: 1;
+    @media screen and (max-width: 767px){
+        flex-grow: 1;
+    }
+    @media screen and (min-width: $tablet) and (max-width: 1199px){
+        margin-right: 165px;
+        text-align: center;
+    }
     // font-style: normal;
     // font-weight: normal;
     // font-size: 14px;
