--- a/sass/components/footer/_footer.scss
+++ b/sass/components/footer/_footer.scss
@@ -3,5 +3,13 @@
     background-color: $hero-footer-background;
 }
 .footer__container{
-    text-align: center;
+    @media screen and (max-width: 767px){
+        text-align: center;
+    }
+    @media screen and (min-width: $tablet) and (max-width: 1199px){
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: baseline
+    }
 }
