--- a/sass/components/portfolio/_gallery.scss
+++ b/sass/components/portfolio/_gallery.scss
@@ -10,8 +10,18 @@
     display: flex;
     flex-wrap: wrap;
     list-style: none;
+    @media screen and (min-width: $tablet) and (max-width: 1199px){
+        margin: -15px;
+    }
 }
 .gallery__item{
-    width: 450px;
-    margin-bottom: 30px;
+    @media screen and (max-width: 767px){
+        max-width: 450px;
+        margin-bottom: 30px;
+    }
+    @media screen and (min-width: $tablet) and (max-width: 1199px){
+        max-width: 354px;
+        margin: 15px;
+        flex-basis: calc((100% - 2 * 30px)/ 2);
+    }
 }
