--- a/sass/components/team-section/_team.scss
+++ b/sass/components/team-section/_team.scss
@@ -25,15 +25,15 @@
     background-color: $main-background-color;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
 
-    &:last-child{
-        margin-bottom: 0;
-    }
     @media screen and (max-width: 767px){
         margin-bottom: 30px;
+        &:last-child{
+            margin-bottom: 0;
+        }
     }
     @media screen and (min-width: $tablet){
         max-width: 354px;
         margin: 15px;
-        flex-basis: calc((100% - 2 *30));
+        flex-basis: calc((100% - 2 *30px) / 2);
     }
 }
