--- a/sass/components/hero/_modal.scss
+++ b/sass/components/hero/_modal.scss
@@ -31,6 +31,9 @@
     @media screen and (min-width: $tablet){
         height: 609px;
     }
+    @media screen and (min-width: $desktop){
+        
+    }
 }
 .modal__title{
     font-weight: 700;
