--- a/sass/components/header/_page-header.scss
+++ b/sass/components/header/_page-header.scss
@@ -19,4 +19,7 @@
       display: flex;
       align-items: center;
     }
+    @media screen and (min-width: $desktop){
+      justify-content: center;
+    }
   }
