--- a/sass/components/companies-section/_companies.scss
+++ b/sass/components/companies-section/_companies.scss
@@ -1,5 +1,8 @@
 .companies{
    padding: 60px 0px;
+   @media screen and (min-width: $desktop){
+       padding: 94px 0px;
+   }
 }
 .companies__title{
     font-weight: 700;
@@ -8,21 +11,23 @@
     text-align: center;
     letter-spacing: 0.03em;
     margin-bottom: 30px;
-    @extend %title
+    @extend %title;
+    @media screen and (min-width: $desktop){
+        margin-bottom: 50px;
+    }
 }
 .companies__list{
     display: flex;
-    flex-wrap: wrap;
     justify-content: center;
     list-style: none;
    @media screen and (max-width: 767px){
-    margin: -15px;
+        margin: -15px;
+        flex-wrap: wrap;
    }
    @media screen and (max-width: 1199px){
-       margin: -15px;
+        flex-wrap: wrap;
+        margin: -15px;
    }
-    // margin-left: auto;
-    // margin-right: auto;
 }
 .companies__item{
    @media screen and (max-width: 767px){
@@ -32,6 +37,12 @@
    @media screen and (min-width: $tablet) and (max-width: 1199px){
        margin: 15px;
        flex-basis: calc((100% - 3 * 30px) / 3);
+   }
+   @media screen and (min-width: $desktop){
+    margin-right: 30px;
+    &:last-child{
+        margin-right: 0;
+    }
    }
 }
 .companies__link{
