--- a/sass/components/features-section/_features.scss
+++ b/sass/components/features-section/_features.scss
@@ -1,5 +1,8 @@
 .features{
     padding: 60px 0px;
+    @media screen and (min-width: $desktop){
+       padding: 94px 0px;
+    }
 }
 .features__title{
     font-weight: 700;
@@ -20,6 +23,9 @@
         flex-wrap: wrap;
         margin: -15px;
     }
+    @media screen and (min-width: $desktop){
+        display: flex;
+    }
 }
 .features__item{
     
@@ -30,10 +36,16 @@
     @media screen and (max-width: 767px){
         margin-bottom: 30px;
     }
-    @media screen and (min-width: $tablet){
+    @media screen and (min-width: $tablet) and (max-width: 1199px){
         max-width: 354px;
         margin: 15px;
         flex-basis: calc((100% - 2 * 30px) / 2);
+    }
+    @media screen and (min-width: $desktop){
+        margin-right: 30px;
+        &:last-child{
+            margin-right: 0;
+        }
     }
 }
 .features__container-icon{
