--- a/sass/components/footer/_address.scss
+++ b/sass/components/footer/_address.scss
@@ -1,17 +1,18 @@
 .address{
-    margin-bottom: 60px;
+    
     @media screen and (max-width: 767px){
+        margin-bottom: 60px;
         flex-grow: 1;
     }
     @media screen and (min-width: $tablet) and (max-width: 1199px){
+        margin-bottom: 60px;
         margin-right: 165px;
         text-align: center;
     }
-    // font-style: normal;
-    // font-weight: normal;
-    // font-size: 14px;
-    // line-height: 1.71;
-    // letter-spacing: 0.03em;
+    @media screen and (min-width: $desktop){
+        // margin-right: 70px;
+        flex-grow: 1;
+    }
 }
 .address__container{
     font-style: normal;
