--- a/sass/components/footer/_social.scss
+++ b/sass/components/footer/_social.scss
@@ -1,7 +1,13 @@
 .social{
-   margin-bottom: 60px;
-   @media screen and (min-width: $tablet){
+    @media screen and (max-width: 767px){
+        margin-bottom: 60px;
+    }
+   @media screen and (min-width: $tablet) and (max-width: 1199px){
+    margin-bottom: 60px;
     text-align: center;
+   }
+   @media screen and (min-width: $desktop){
+       margin-right: 93px;
    }
 }
 .social__title{
