--- a/css/main.css
+++ b/css/main.css
@@ -303,9 +303,14 @@ h1, h2, h3, h4, h5, h6, p, ul {
 
 .page-header {
   position: relative;
-  padding-top: 10px;
-  padding-bottom: 10px;
   border-bottom: 1px solid #ececec;
+}
+
+@media screen and (max-width: 767px) {
+  .page-header {
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
 }
 
 @media screen and (max-width: 767px) {
@@ -366,26 +371,44 @@ h1, h2, h3, h4, h5, h6, p, ul {
 }
 
 .menu {
-  display: none;
-  position: absolute;
-  z-index: 999;
-  top: 100%;
-  left: 0;
-  padding: 48px 40px;
-  width: 100%;
-  height: 796px;
   background-color: #ffffff;
-  text-align: left;
 }
 
-.menu.is-open {
-  display: block;
+@media screen and (max-width: 767px) {
+  .menu {
+    display: none;
+    position: absolute;
+    z-index: 999;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    height: 796px;
+    padding: 48px 40px;
+    text-align: left;
+  }
+  .menu.is-open {
+    display: block;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .menu {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
 }
 
 .menu__button {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -439,7 +462,7 @@ h1, h2, h3, h4, h5, h6, p, ul {
 
 @media screen and (min-width: 768px) {
   .page-header__link {
-    margin-right: 93px;
+    margin-right: 88px;
   }
 }
 
@@ -471,8 +494,20 @@ h1, h2, h3, h4, h5, h6, p, ul {
   }
 }
 
-.site-nav__list {
-  margin-bottom: 302px;
+.navigation {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-right: 84px;
+}
+
+@media screen and (max-width: 767px) {
+  .site-nav__list {
+    margin-bottom: 302px;
+  }
 }
 
 @media screen and (min-width: 768px) {
@@ -555,14 +590,6 @@ h1, h2, h3, h4, h5, h6, p, ul {
   color: #2196f3;
 }
 
-.contact__item {
-  margin-right: 50px;
-}
-
-.contact__item:last-child {
-  margin-right: 0;
-}
-
 @media screen and (max-width: 767px) {
   .contact__item {
     margin-bottom: 32px;
@@ -590,6 +617,10 @@ h1, h2, h3, h4, h5, h6, p, ul {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
+    margin-right: 50px;
+  }
+  .contact__item:last-child {
+    margin-right: 0;
   }
 }
 
@@ -631,8 +662,8 @@ h1, h2, h3, h4, h5, h6, p, ul {
     -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
+    font-size: 12px;
+    line-height: 1.16;
     letter-spacing: 0.02em;
   }
 }
