--- a/sass/components/header/_contact.scss
+++ b/sass/components/header/_contact.scss
@@ -1,11 +1,7 @@
 .contact__list{
-    @extend %list
+    @extend %list;
 }
 .contact__item{
-    margin-right: 50px;
-    &:last-child{
-        margin-right: 0;
-    }
     @media screen and (max-width: 767px){
         margin-bottom: 32px;
         &:last-child{
@@ -22,7 +18,10 @@
     @media screen and (min-width: $desktop){
         display: flex;
         align-items: center;
-    
+        margin-right: 50px;
+        &:last-child{
+            margin-right: 0;
+        }
     }
 }
 .contact__link{
@@ -54,8 +53,8 @@
         text-decoration: none;
         transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
         font-weight: 500;
-        font-size: 14px;
-        line-height: 1.14;
+        font-size: 12px;
+        line-height: 1.16;
         letter-spacing: 0.02em;
     }
 }
