--- a/sass/components/header/_menu.scss
+++ b/sass/components/header/_menu.scss
@@ -1,20 +1,29 @@
 .menu{
-    display: none;
-    position: absolute;
-    z-index: 999;
-    top: 100%;
-    left: 0;
-    padding: 48px 40px;
-    width: 100%;
-    height: 796px;
     background-color: $main-background-color;
-    text-align: left;
-    &.is-open{
-        display: block;
+    
+    @media screen and (max-width: 767px){
+        display: none;
+        position: absolute;
+        z-index: 999;
+        top: 100%;
+        left: 0;
+        width: 100%;
+        height: 796px;
+        padding: 48px 40px;
+        text-align: left;
+        &.is-open{
+            display: block;
+        }
+    }
+    @media screen and (min-width: $tablet){
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        // max-height: 48px;
     }
 }
 .menu__button{
-    display: flex;
+    display: inline-flex;
     justify-content: center;
     align-items: center;
     text-align: center;
