--- a/sass/components/header/_nav.scss
+++ b/sass/components/header/_nav.scss
@@ -1,7 +1,14 @@
-
+.navigation{
+    display: flex;
+    align-items: center;
+    margin-right: 84px
+    // max-height: 48px;
+}
 .site-nav__list{
     @extend %list;
-    margin-bottom: 302px;
+    @media screen and (max-width: 767px){
+        margin-bottom: 302px;
+    }
     @media screen and (min-width: $tablet){
         display: flex;
     }
