--- a/css/main.css
+++ b/css/main.css
@@ -391,7 +391,7 @@ h1, h2, h3, h4, h5, h6, p, ul {
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .menu {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -402,6 +402,23 @@ h1, h2, h3, h4, h5, h6, p, ul {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .menu {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-flex: 1;
+        -ms-flex-positive: 1;
+            flex-grow: 1;
   }
 }
 
@@ -470,6 +487,7 @@ h1, h2, h3, h4, h5, h6, p, ul {
   .page-header__link {
     font-size: 26px;
     line-height: 1.19;
+    margin-right: 93px;
   }
 }
 
@@ -590,6 +608,23 @@ h1, h2, h3, h4, h5, h6, p, ul {
   color: #2196f3;
 }
 
+@media screen and (min-width: 1200px) {
+  .contact {
+    margin-left: auto;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .contact__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
 @media screen and (max-width: 767px) {
   .contact__item {
     margin-bottom: 32px;
@@ -599,7 +634,7 @@ h1, h2, h3, h4, h5, h6, p, ul {
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .contact__item {
     display: inline-block;
     margin-bottom: 10px;
@@ -657,6 +692,9 @@ h1, h2, h3, h4, h5, h6, p, ul {
 
 @media screen and (min-width: 768px) {
   .contact__link {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
     color: #757575;
     text-decoration: none;
     -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -668,14 +706,35 @@ h1, h2, h3, h4, h5, h6, p, ul {
   }
 }
 
+@media screen and (min-width: 1200px) {
+  .contact__link {
+    font-size: 14px;
+    line-height: 1.16;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
 .contact__icon {
-  margin-right: 10px;
   fill: currentColor;
 }
 
 @media screen and (max-width: 767px) {
   .contact__icon {
     display: none;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .contact__icon {
+    margin-right: 8px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .contact__icon {
+    margin-right: 10px;
   }
 }
 
@@ -1329,12 +1388,21 @@ h1, h2, h3, h4, h5, h6, p, ul {
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .team__item {
     max-width: 354px;
     margin: 15px;
     -ms-flex-preferred-size: calc((100% - 2 *30px) / 2);
         flex-basis: calc((100% - 2 *30px) / 2);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .team__item {
+    margin-right: 30px;
+  }
+  .team__item:last-child {
+    margin-right: 0;
   }
 }
 
@@ -1988,6 +2056,18 @@ h1, h2, h3, h4, h5, h6, p, ul {
 
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .gallery__item:first-child .portfolio__container {
+    height: 146px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .gallery__item:first-child .portfolio__container {
+    height: 146px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .gallery__item:nth-child(3) .portfolio__container {
     height: 146px;
   }
 }
