--- a/sass/components/common/_logo.scss
+++ b/sass/components/common/_logo.scss
@@ -12,6 +12,7 @@
     @media screen and (min-width: $desktop){
         font-size: 26px;
         line-height: 1.19;
+        margin-right: 93px;
     }
 }
 .page-header__logo{
