--- a/sass/components/header/_contact.scss
+++ b/sass/components/header/_contact.scss
@@ -1,5 +1,17 @@
+.contact{
+    @media screen and (min-width: $tablet){
+    //     max-width: 160px;
+    }
+    @media screen and (min-width: $desktop){
+        margin-left: auto;
+    }
+}
 .contact__list{
     @extend %list;
+    @media screen and (min-width: $desktop){
+        display: flex;
+        align-items: center;
+    }
 }
 .contact__item{
     @media screen and (max-width: 767px){
@@ -8,7 +20,7 @@
             margin-bottom: 0;
         }
     }
-    @media screen and (min-width: $tablet){
+    @media screen and (min-width: $tablet) and (max-width: 1199px){
         display: inline-block;
         margin-bottom: 10px;
         &:last-child{
@@ -49,6 +61,7 @@
         }
     }
     @media screen and (min-width: $tablet){
+        display: flex;
         color: $main-text-color;
         text-decoration: none;
         transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -57,11 +70,21 @@
         line-height: 1.16;
         letter-spacing: 0.02em;
     }
+    @media screen and (min-width: $desktop){
+        font-size: 14px;
+        line-height: 1.16;
+        align-items: center;
+    }
 }
 .contact__icon{
-    margin-right: 10px;
     fill: currentColor;
     @media screen and (max-width: 767px){
         display: none;
+    }
+    @media screen and (min-width: $tablet){
+        margin-right: 8px;
+    }
+    @media screen and (min-width: $desktop){
+        margin-right: 10px;
     }
 }
