--- a/sass/components/team-section/_team.scss
+++ b/sass/components/team-section/_team.scss
@@ -37,9 +37,15 @@
             margin-bottom: 0;
         }
     }
-    @media screen and (min-width: $tablet){
+    @media screen and (min-width: $tablet) and (max-width: 1199px){
         max-width: 354px;
         margin: 15px;
         flex-basis: calc((100% - 2 *30px) / 2);
+    }
+    @media screen and (min-width: $desktop){
+        margin-right: 30px;
+        &:last-child{
+            margin-right: 0;
+        }
     }
 }
