--- a/sass/components/team-section/_card.scss
+++ b/sass/components/team-section/_card.scss
@@ -1,7 +1,19 @@
+.card__icon-container{
+    width: 450;
+    height: 460px;
+    @media screen and (min-width: $tablet){
+        width: 354px;
+        height: 374px;
+    }
+    @media screen and (min-width: $desktop){
+        width: 270px;
+        height: 260px;
+    }
+}
 .card__img{
     display: block;
-    max-width: 450px;
-    max-height: 460px;
+   width: 100%;
+   height: 100%;
 }
 .card__text-container{
     padding-top: 30px;
